Corrección funciones de vecindad

--- a/Reporte/referencias.bib
+++ b/Reporte/referencias.bib
@@ -54,3 +54,25 @@
 	year = {1995},
 	note = {Accedido el 11 de marzo de 2025. [En línea]. Disponible: \url{https://citeseerx.ist.psu.edu/document?repid=rep1\&type=pdf\&doi=e9a14839d7fc56c17082fa14436f46ccec1c6c83}}
 }
+
+@misc{cec,
+	author    = {{Y. S. Ong, P. N. Suganthan, and T. Weise}},
+	title     = {{Definitions of CEC2017 Benchmark Suite}},
+	year      = {2017},
+	note      = {Accedido el 26 de marzo de 2025. [En línea]. Disponible: \url{ruta/local/o/enlace}}
+}
+
+@techreport{plot,
+	author    = {Awad, N. H. and Ali, M. Z. and Suganthan, P. N. and Liang, J. J. and Qu, B. Y.},
+	title     = {{Problem Definitions and Evaluation Criteria for the CEC 2017 Special Session and Competition on Single Objective Bound Constrained Real-Parameter Numerical Optimization}},
+	year      = {2016},
+	note      = {Accedido el 26 de marzo de 2025}
+}
+
+@misc{git,
+	author    = {D. Tilley},
+	title     = {{GitHub - tilleyd/cec2017-py: Python module for CEC 2017 single objective optimization test function suite}},
+	year      = {2025},
+	note      = {Accedido el 26 de marzo de 2025. [En línea]. Disponible: \url{https://github.com/tilleyd/cec2017-py}}
+}
+
