--- a/Report/HillClimbing.tex
+++ b/Report/HillClimbing.tex
@@ -917,6 +917,6 @@ La tabla \ref{tab:tiempo} por su parte, muestra las estadísticas obtenidas pero
 	\clearpage
 	\addcontentsline{toc}{section}{Referencias}
 	\bibliographystyle{IEEEtran}
-	\bibliography{referencias}
+	\bibliography{referencias_HC}
 
 \end{document}
