--- a/Report/SimulatedAnnealing.tex
+++ b/Report/SimulatedAnnealing.tex
@@ -623,6 +623,6 @@ La implementación de un almacenamiento de los mejores resultados permite regist
 	\clearpage
 	\addcontentsline{toc}{section}{Referencias}
 	\bibliographystyle{IEEEtran}
-	\bibliography{referencias}
+	\bibliography{referencias_SA}
 
 \end{document}
