--- a/Report/referencias_SA.bib
+++ b/Report/referencias_SA.bib
@@ -66,3 +66,24 @@
 	note = {Accedido el 6 de abril de 2025},
 	url = {https://doi.org/10.1088/0031-9155/34/3/001}
 }
+
+@misc{cec,
+	author    = {{Y. S. Ong, P. N. Suganthan, and T. Weise}},
+	title     = {{Definitions of CEC2017 Benchmark Suite}},
+	year      = {2017},
+	note      = {Accedido el 26 de marzo de 2025. [En línea]. Disponible: \url{ruta/local/o/enlace}}
+}
+
+@techreport{plot,
+	author    = {Awad, N. H. and Ali, M. Z. and Suganthan, P. N. and Liang, J. J. and Qu, B. Y.},
+	title     = {{Problem Definitions and Evaluation Criteria for the CEC 2017 Special Session and Competition on Single Objective Bound Constrained Real-Parameter Numerical Optimization}},
+	year      = {2016},
+	note      = {Accedido el 26 de marzo de 2025}
+}
+
+@misc{git,
+	author    = {D. Tilley},
+	title     = {{GitHub - tilleyd/cec2017-py: Python module for CEC 2017 single objective optimization test function suite}},
+	year      = {2025},
+	note      = {Accedido el 26 de marzo de 2025. [En línea]. Disponible: \url{https://github.com/tilleyd/cec2017-py}}
+}
